@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/rack-0.9.1.ebuild,v 1.1 2009/03/01 13:03:53 a3li Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/rack-0.9.1.ebuild,v 1.2 2009/04/12 11:55:25 bluebird Exp $
 
 inherit gems
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://rubyforge.org/projects/rack"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 USE_RUBY="ruby18"
