@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/rspec-rails-1.2.2.ebuild,v 1.1 2009/03/23 19:40:36 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/rspec-rails-1.2.2.ebuild,v 1.2 2009/04/12 11:58:02 bluebird Exp $
 
 inherit gems
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://rspec.info/"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
 USE_RUBY="ruby18"
