@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rspec-rails
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.11 2009/03/23 19:40:36 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.12 2009/04/12 11:58:02 bluebird Exp $
+
+  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
+  rspec-rails-1.2.2.ebuild:
+  Add ~sparc keyword, bug #262706
 
 *rspec-rails-1.2.2 (23 Mar 2009)
 
