@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rack
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/ChangeLog,v 1.3 2009/03/01 13:03:53 a3li Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack/ChangeLog,v 1.4 2009/04/12 11:55:25 bluebird Exp $
+
+  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> rack-0.9.1.ebuild:
+  Add ~sparc keyword, bug #262706
 
 *rack-0.9.1 (01 Mar 2009)
 
